apps/sandbox/podinfo/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: podinfo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: client-react-nginx
                port:
                  number: 8080
            path: /
